add new db module, that contains scripts for postgres db and changed the target version to 17. Assuming that open-jdk 17 as base for this api and will plan to release the api and webapp with basic auth. Update to support user registration, change of email, user email verification, update README.md